@@ -20,14 +20,6 @@ require 'pdf/inspector'
 require 'socket'
 require 'tmpdir'
 
-# NOTE: fix invalid bits for PNG in Gmagick
-Gmagick.prepend (Module.new do
-  def initialize image_blob
-    super
-    @bits = [@bits, 8].max
-  end
-end) if defined? GMagick::Image
-
 # NOTE: fix warning in Prawn::Font:TTF
 Prawn::Font::TTF.prepend (Module.new do
   def initialize *args
