@@ -9,6 +9,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 Bug Fixes::
 
+* patch prawn-gmagick to reread bit depth of a PNG image if it extracts the wrong value (#2216)
 * don't crash if inline role defines border width but not border color
 
 == 2.0.5 (2022-05-26) - @mojavelinux
